[package]
name = "lsp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/proxy.rs"
name = "lsp-proxy"

[[bin]]
path = "src/replay.rs"
name = "lsp-replay"

[dependencies]
anyhow = "1.0.66"
nom = "7.1.1"
serde = {version = "1.0.147", features=["derive"]}
serde_json = "1.0.87"
tokio = { version = "1.21.2", features=["full"]}
toml = "0.5.9"
